--- a/webapp/public/assets/style.css
+++ b/webapp/public/assets/style.css
@@ -113,7 +113,7 @@ a{
 .section.secondary{
   background: linear-gradient(to right, rgba(0, 0, 0, 1) 0%,  rgba(0, 0, 0, .65) 100%), url(./images/about.jpg);
   background-color: var(--color-primary);
-  clip-path: polygon(0 0, 100% 10%, 100% 93%, 0 100%);
+  clip-path: polygon(0 0, 100% 10%, 100% 100%, 0 100%);
   color: var(--light);
   margin: 10px 0px;
   padding-top:60px;
@@ -127,22 +127,23 @@ a{
 .section.secondary p{
   text-align: justify;
   padding: 10px 20px;
-  font-size: 1.1rem;
   text-indent: 40px;
 }
 
 .big-text{
   padding:10px;
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 800;
   text-align: center;
 }
 
 .main-title{
   padding: 10px;
-  font-size: 1.75rem;
-  font-weight: 400;
+  letter-spacing: 2px;
+  font-size: 1.5rem;
+  font-weight: 600;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .main-container{
@@ -207,9 +208,10 @@ button{
   transition: all 0.3s ease-in-out;
 }
 
-button:hover, button:focus, button:active{
-  box-shadow: 0 0 20px rgba(0, 0, 0, .5);
-  transform: scale(1.1);
+button:hover, button:focus, button:active, 
+.member:hover, .member:focus, .member:active{
+  box-shadow: 10px 5px 5px rgba(0, 0, 0, .5);
+  transform: scale(1.05);
 }
 
 .drag-area img{
@@ -240,11 +242,16 @@ button:hover, button:focus, button:active{
   align-items: center;
 }
 
-.team-members{
+.team-members, .steps{
   display: grid;
-  grid-gap: 20px 50px;
+  place-items: center;
+  grid-gap: 40px 50px;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 1fr;
+}
+
+.steps{
+  justify-content: stretch;
+  margin: 20px 30px;
 }
 
 .big-text.underline{
@@ -258,16 +265,45 @@ button:hover, button:focus, button:active{
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  text-align: center;
+  align-items: center;
+  letter-spacing: .75px;
+  font-weight: 500;
   padding: 20px;
-  box-shadow: 0 8px 15px rgba(0, 0, 0, .5);;
+  transition: all 0.3s ease-in-out;
 }
 
-.member img{
+.single-step{
+  background-color: var(--secondary-bg);
+  display: grid;
+  padding-top: 20px;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 10px;
+  justify-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.single-step-content{
+  align-self: flex-start;
+  padding: 5px 20px;
+  font-size: 1.1rem;
+  text-align: center;
+}
+
+.member{
+  border-radius: 15px;
+  box-shadow: 0 0 7px rgba(0, 0, 0, .5);
+}
+
+.member img, .single-step img{
   max-width: 150px;
   border-radius: 50%;
   object-fit: cover;
   padding-bottom: 10px;
+}
+.single-step img{
+  border-radius: 0;
+  max-width: 100px;
 }
 
 .member a{
@@ -277,7 +313,7 @@ button:hover, button:focus, button:active{
 }
 
 .member a:hover{
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 @media screen and (max-width: 800px) {
@@ -288,6 +324,16 @@ button:hover, button:focus, button:active{
 
   .team-members{
     grid-template-columns: 1fr 1fr;
+  }
+
+  .steps{
+    grid-template-columns: 1fr;
+  }
+
+  .single-step{
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: 1fr;
+    justify-content: space-around;
   }
 }
 
@@ -375,7 +421,6 @@ button:hover, button:focus, button:active{
   padding: 5px;
   width: auto;
   color:var(--foreground);
-  font-size: 20px;
 }
 
 .fa-check-square {
@@ -410,17 +455,19 @@ button:hover, button:focus, button:active{
 
 .footer{
   background-color: var(--secondary-bg);
-
   display: flex;
   padding: 10px;
   flex-direction: column;
-  text-align: center;
+  align-items: center;
   font-size: 16px;
   font-weight: 500;
+  fill: var(--foreground);
 }
 
 .footer-text{
   padding: 5px;
+  display: flex;
+  align-items: center;
 }
 
 .firefly {
